[project]
name = "robust_laplacian"
version = "1.0.0"
description = "Robust Laplace matrices for meshes and point clouds"
readme = "README.md"
license.file = "LICENSE"
authors = [
  { name = "Nicholas Sharp", email = "nmwsharp@gmail.com" },
]
maintainers = [
  {  name = "Nicholas Sharp", email = "nmwsharp@gmail.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
requires-python = ">=3.7"

dependencies = [
  "numpy",
]

[project.urls]
Homepage = "https://github.com/nmwsharp/robust-laplacians-py"

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build.verbose = true
logging.level = "INFO"